api수정